--- a/trunk/ phukien/phukienipadx.Dal/phukienipadx.Dal.csproj
+++ b/trunk/ phukien/phukienipadx.Dal/phukienipadx.Dal.csproj
@@ -102,7 +102,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>NiceStore.edmx</DependentUpon>
     </Compile>
+    <Compile Include="phukienipadx.cs">
+      <DependentUpon>phukienipadx.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="phukienipadx.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>phukienipadx.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Repository\adminRepository.cs">
       <DependentUpon>RepositoryTemplate.tt</DependentUpon>
     </Compile>
@@ -170,13 +183,28 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ModelTemplate.cs</LastGenOutput>
     </None>
+    <None Include="phukienipadx.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>phukienipadx.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Repository\RepositoryTemplate.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>RepositoryTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="phukienipadx.dbml.layout">
+      <DependentUpon>phukienipadx.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
