--- a/trunk/ phukien/GiaPhuc/GiaPhuc.csproj
+++ b/trunk/ phukien/GiaPhuc/GiaPhuc.csproj
@@ -163,6 +163,10 @@
     <Content Include="Admin\Scripts\vm\product-vm.js" />
     <Content Include="static\css\AdminSite.css" />
     <Content Include="static\css\christmas.css" />
+    <Content Include="static\css\christmas.min.css" />
+    <Content Include="static\css\menu\skins\black.min.css" />
+    <Content Include="static\css\productstyle.min.css" />
+    <Content Include="static\css\dropdown-menu.min.css" />
     <Content Include="static\css\dropdown-menu.css" />
     <Content Include="static\css\menu\dcmegamenu.css" />
     <Content Include="static\css\menu\dcverticalmegamenu.css" />
@@ -195,6 +199,7 @@
     <Content Include="static\css\menu\skins\red.css" />
     <Content Include="static\css\menu\skins\white.css" />
     <Content Include="static\css\site.min.css" />
+    <Content Include="static\css\slider\slider.min.css" />
     <Content Include="static\css\slider\slider.css" />
     <Content Include="static\css\tabs.css" />
     <Content Include="static\images\advertise\QCAO 1.jpg" />
@@ -320,6 +325,21 @@
     <Content Include="static\response\8cols.css" />
     <Content Include="static\response\9cols.css" />
     <Content Include="static\response\col.css" />
+    <Content Include="static\response\1024.min.css" />
+    <Content Include="static\response\10cols.min.css" />
+    <Content Include="static\response\11cols.min.css" />
+    <Content Include="static\response\12cols.min.css" />
+    <Content Include="static\response\2cols.min.css" />
+    <Content Include="static\response\3cols.min.css" />
+    <Content Include="static\response\480.min.css" />
+    <Content Include="static\response\4cols.min.css" />
+    <Content Include="static\response\5cols.min.css" />
+    <Content Include="static\response\6cols.min.css" />
+    <Content Include="static\response\768.min.css" />
+    <Content Include="static\response\7cols.min.css" />
+    <Content Include="static\response\8cols.min.css" />
+    <Content Include="static\response\9cols.min.css" />
+    <Content Include="static\response\col.min.css" />
     <Content Include="static\response\html5reset.css" />
     <Content Include="static\response\responsivegridsystem.css" />
     <Content Include="template\shopcarttemplate.htm" />
