--- a/ phukien/GiaPhuc/GiaPhuc.csproj
+++ b/ phukien/GiaPhuc/GiaPhuc.csproj
@@ -49,6 +49,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxMin">
+      <HintPath>packages\AjaxMin.4.84.4790.14417\lib\net40\AjaxMin.dll</HintPath>
+    </Reference>
+    <Reference Include="Combres">
+      <HintPath>packages\combres.2.2.2.18\lib\net40\Combres.dll</HintPath>
+    </Reference>
     <Reference Include="DbLinq">
       <HintPath>Required\DbLinq.dll</HintPath>
     </Reference>
@@ -56,11 +62,24 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Required\DbLinq.MySql.dll</HintPath>
     </Reference>
+    <Reference Include="dotless.Core">
+      <HintPath>packages\dotless.1.3.1.0\lib\dotless.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="EcmaScript.NET.modified">
+      <HintPath>packages\YUICompressor.NET.1.7.1.0\lib\net35\EcmaScript.NET.modified.dll</HintPath>
+    </Reference>
+    <Reference Include="Fasterflect">
+      <HintPath>packages\fasterflect.2.1.3\lib\net40\Fasterflect.dll</HintPath>
+    </Reference>
     <Reference Include="Google.GData.Analytics">
       <HintPath>E:\Program Files (x86)\Google\Google Data API SDK\Redist\Google.GData.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="Google.GData.Client">
       <HintPath>E:\Program Files (x86)\Google\Google Data API SDK\Redist\Google.GData.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Security, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -86,6 +105,12 @@
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WebActivator">
+      <HintPath>packages\WebActivator.1.4.4\lib\net40\WebActivator.dll</HintPath>
+    </Reference>
+    <Reference Include="Yahoo.Yui.Compressor">
+      <HintPath>packages\YUICompressor.NET.1.7.1.0\lib\net35\Yahoo.Yui.Compressor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\Default.aspx" />
@@ -107,6 +132,9 @@
     <Content Include="Admin\template\PageTemplate.htm" />
     <Content Include="Admin\Pages\PageManager.aspx" />
     <Content Include="Admin\Pages\PageEntry.aspx" />
+    <Content Include="App_Data\combres.xml" />
+    <Content Include="App_Data\combres_full_with_annotation.xml" />
+    <Content Include="App_Data\combres_minimal.xml" />
     <Content Include="BingSiteAuth.xml" />
     <Content Include="CMS.asmx" />
     <Content Include="Controls\AdvertiseLeftSide.ascx" />
@@ -157,6 +185,7 @@
     <Content Include="Scripts\menu\jquery.dcmegamenu.1.3.3.min.js" />
     <Content Include="Scripts\menu\jquery.dcverticalmegamenu.1.3.js" />
     <Content Include="Scripts\menu\jquery.hoverIntent.minified.js" />
+    <Content Include="Scripts\page\product.js" />
     <Content Include="Scripts\slider\helper-plugins\jquery.ba-throttle-debounce.min.js" />
     <Content Include="Scripts\slider\helper-plugins\jquery.mousewheel.min.js" />
     <Content Include="Scripts\slider\helper-plugins\jquery.touchSwipe.min.js" />
@@ -170,6 +199,7 @@
     <Content Include="static\css\christmas.css" />
     <Content Include="static\css\christmas.min.css" />
     <Content Include="static\css\menu\skins\black.min.css" />
+    <Content Include="static\css\product.css" />
     <Content Include="static\css\productstyle.min.css" />
     <Content Include="static\css\dropdown-menu.min.css" />
     <Content Include="static\css\dropdown-menu.css" />
@@ -1352,6 +1382,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="App_Start\Combres.cs" />
     <Compile Include="CMS.asmx.cs">
       <DependentUpon>CMS.asmx</DependentUpon>
       <SubType>Component</SubType>
@@ -1638,6 +1669,8 @@
   <ItemGroup>
     <Content Include="VisitorCounter.ashx" />
     <Content Include="Admin\Web.config" />
+    <Content Include="packages.config" />
+    <None Include="combres.readme" />
     <None Include="Scripts\jquery.cycle2.js.map" />
     <None Include="static\Fonts\ANTON.ttf" />
     <None Include="third-party\jtable\themes\basic\jtable_basic.less" />
