--- a/ phukien/GiaPhuc/Web.config
+++ b/ phukien/GiaPhuc/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -7,61 +7,61 @@
   -->
 <configuration>
   <configSections>
-    <section name="providers" type="GiaPhuc.Configuration.ProvidersSection, GiaPhuc"/>
+    <section name="providers" type="GiaPhuc.Configuration.ProvidersSection, GiaPhuc" />
     <sectionGroup name="RewriteURL">
-      <section name="URLSettings" type="System.Configuration.NameValueSectionHandler,System,Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+      <section name="URLSettings" type="System.Configuration.NameValueSectionHandler,System,Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     </sectionGroup>
-  </configSections>
+  <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" /><section name="combres" type="Combres.ConfigSectionSetting, Combres, Version=2.2, Culture=neutral, PublicKeyToken=1ca6b37997dd7536" /></configSections>
   <connectionStrings>
-    <add name="PhukienConnectionString" connectionString="data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;"/>
-    <add name="ConnectionString" connectionString="data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;Charset=utf8;"/>
-    <add name="ApplicationConnection" connectionString="metadata=res://*/NiceStore.csdl|res://*/NiceStore.ssdl|res://*/NiceStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;multipleactiveresultsets=True;App=EntityFramework&quot;"/>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+    <add name="PhukienConnectionString" connectionString="data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;" />
+    <add name="ConnectionString" connectionString="data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;Charset=utf8;" />
+    <add name="ApplicationConnection" connectionString="metadata=res://*/NiceStore.csdl|res://*/NiceStore.ssdl|res://*/NiceStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;multipleactiveresultsets=True;App=EntityFramework&quot;" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="/gioi-thieu/" value="./pages/aboutpage.aspx"/>
-    <add key="/lien-he/" value="./pages/contactpage.aspx"/>
-    <add key="/bao-da-ipad/" value="/pages/productdetail.aspx"/>
-    <add key="/phu-kien-ipad/" value="/pages/productdetail.aspx"/>
-    <add key="/gio-hang/" value="/pages/cartpage.aspx"/>
-    <add key="/chuyen-muc/" value="./pages/topicpage.aspx"/>
-    <add key="/tin-tuc-cong-nghe/" value="/pages/newspage.aspx"/>
-    <add key="/trang-chu/" value="/default.aspx"/>
-    <add key="/baoda/" value="/pages/productdetail.aspx"/>
-    <add key="/phukien/" value="/pages/productdetail.aspx"/>
-    <add key="/home/" value="/default.aspx"/>
-    <add key="rss" value="http://rss.pcworld.com.vn/articles/san-pham/"/>
-    <add key="imgUrl" value="/Upload/"/>
-    <add key="thumbUrl" value="/Upload/Thumbs/"/>
-  </appSettings>
+    <add key="/gioi-thieu/" value="./pages/aboutpage.aspx" />
+    <add key="/lien-he/" value="./pages/contactpage.aspx" />
+    <add key="/bao-da-ipad/" value="/pages/productdetail.aspx" />
+    <add key="/phu-kien-ipad/" value="/pages/productdetail.aspx" />
+    <add key="/gio-hang/" value="/pages/cartpage.aspx" />
+    <add key="/chuyen-muc/" value="./pages/topicpage.aspx" />
+    <add key="/tin-tuc-cong-nghe/" value="/pages/newspage.aspx" />
+    <add key="/trang-chu/" value="/default.aspx" />
+    <add key="/baoda/" value="/pages/productdetail.aspx" />
+    <add key="/phukien/" value="/pages/productdetail.aspx" />
+    <add key="/home/" value="/default.aspx" />
+    <add key="rss" value="http://rss.pcworld.com.vn/articles/san-pham/" />
+    <add key="imgUrl" value="/Upload/" />
+    <add key="thumbUrl" value="/Upload/Thumbs/" />
+  <add key="CombresSectionName" value="combres" /></appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" />
-    <xhtmlConformance mode="Strict"/>
-    <sessionState mode="InProc" cookieless="false" timeout="20"/>
-    <compilation debug="true" targetFramework="4.0"/>
+    <xhtmlConformance mode="Strict" />
+    <sessionState mode="InProc" cookieless="false" timeout="20" />
+    <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms loginUrl="/Admin/Login.aspx" timeout="20"/>
+      <forms loginUrl="/Admin/Login.aspx" timeout="20" />
     </authentication>
     <membership>
       <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
     <profile>
       <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
     <roleManager enabled="false">
       <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
+        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
       </providers>
     </roleManager>
-    <pages validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <pages validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"><namespaces><add namespace="Combres" /></namespaces></pages>
     <!--<customErrors mode="On" defaultRedirect="Error.htm"  redirectMode="ResponseRedirect">
       <error statusCode="403" redirect="Error_403.htm" />
       <error statusCode="404" redirect="Error_404.htm" />
@@ -69,15 +69,24 @@
     <customErrors mode="On">
       <error statusCode="404" redirect="/loi-404" />
     </customErrors>
-  </system.web>
+  <httpHandlers><add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" /></httpHandlers></system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-  </system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+  <handlers><add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" /></handlers></system.webServer>
   <system.web.extensions>
     <scripting>
       <webServices>
-        <jsonSerialization maxJsonLength="50000000"/>
+        <jsonSerialization maxJsonLength="50000000" />
       </webServices>
     </scripting>
   </system.web.extensions>
+<dotless minifyCss="false" cache="true" web="false" /><combres definitionUrl="~/App_Data/combres.xml" />
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.84.4790.14405" newVersion="4.84.4790.14405" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
