--- a/ phukien/GiaPhuc/packages/repositories.config
+++ b/ phukien/GiaPhuc/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\..\phukienipadx.Tests\packages.config" />
   <repository path="..\..\phukienipadx\packages.config" />
+  <repository path="..\packages.config" />
 </repositories>
